# decaf

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: ci.yml  performance-and-size.yml
checker/: Cargo.toml
checker/binary-serialize-derive/: Cargo.toml  macro.rs
checker/definitions/: internal.d.ts  main.d.ts  overrides.d.ts  simple.d.ts
checker/examples/: calculate_subtypes.rs  generate_cache.rs  run_checker.rs
checker/fuzz/: Cargo.toml
checker/fuzz/fuzz_targets/: check_project_naive.rs
checker/specification/: Cargo.toml  build.rs  specification.md  test.rs  to_implement.md
checker/src/: diagnostics.rs  errors.rs  lib.rs  options.rs  range_map.rs  serialization.rs  settings.rs  type_mappings.rs  utils.rs
checker/src/behavior/: assignments.rs  constant_functions.rs  functions.rs  objects.rs  operations.rs  template_literal.rs  variables.rs
checker/src/context/: bases.rs  calling.rs  environment.rs  facts.rs  information.rs  invocation.rs  mod.rs  root.rs  store.rs
checker/src/events/: application.rs  function_calling.rs  helpers.rs  mod.rs  printing.rs
checker/src/features/: assignments.rs  conditional.rs  constant_functions.rs  exceptions.rs  functions.rs  iteration.rs  mod.rs  modules.rs  narrowing.rs  objects.rs  regexp.rs  template_literal.rs  variables.rs
checker/src/features/operations/: logical.rs  mathematical_bitwise.rs  mod.rs  relation.rs  unary.rs
checker/src/structures/: functions.rs  jsx.rs  modules.rs  objects.rs  operators.rs  proxy.rs  variables.rs
checker/src/synthesis/: assignments.rs  block.rs  classes.rs  declarations.rs  definitions.rs  expressions.rs  functions.rs  hoisting.rs  interactive.rs  interfaces.rs  mod.rs  module.rs  object_literal.rs  statements.rs  type_annotations.rs  type_references.rs  types.rs  variables.rs
checker/src/synthesis/extensions/: is_expression.rs  jsx.rs
checker/src/types/: calling.rs  casts.rs  classes.rs  disjoint.rs  functions.rs  helpers.rs  indexing.rs  intrinsics.rs  logical.rs  mod.rs  operations.rs  printing.rs  properties.rs  store.rs  subtyping.rs  terms.rs
checker/src/types/generics/: chain.rs  contributions.rs  generic_type_arguments.rs  generic_type_parameters.rs  mod.rs  substitution.rs
checker/src/types/poly_types/: mod.rs  specialization.rs
checker/src/types/poly_types/generics/: generic_type_arguments.rs  generic_type_parameters.rs  mod.rs  specialized_generic_structure.rs
checker/src/types/properties/: access.rs  assignment.rs  list.rs  mod.rs
checker/src/utilities/: debugging.rs  float_range.rs  map.rs  modulo_class.rs  range_map.rs  serialization.rs
checker/tests/: partial_source.rs  suggestions.rs  type_mappings.rs
exp/: package.json  tsconfig.json
exp/scripts/: exp_1.ts  exp_2.bash
js-based-plugin/: index.js  package.json  types.d.ts
js-cli-and-library/: package.json  test.cjs  test.js
js-cli-and-library/src/: cli.js  index.js  index.mjs  initialised.js  initialized.js
js-cli-and-library/tests/: library.test.mjs
paper/midterm_report/: .gitignore  .textlintrc  Makefile  main.tex  package.json  pnpm-lock.yaml
paper/midterm_report/.devcontainer/: devcontainer.json
paper/midterm_report/backups/: 20241015.buk
paper/midterm_report/classes/: tyukan.cls
paper/paper/: Makefile  cite.bib  localSettings.yaml  main.tex  package.json
paper/paper/sections/: abstract.tex  acknowledgment.tex  appendix.tex  experiment.tex  impl.tex  index.tex  introduction.tex  overview.tex  specification.tex  summary.tex
paper/proceeding/: .latexmkrc  main.tex  package.json
paper/proceeding/classes/: yokou.cls
parser/: Cargo.toml
parser/examples/: chain.rs  code_blocks_to_script.rs  duplicate_block.rs  expressions.rs  extractor.rs  jsx.rs  lex.rs  lexing.rs  parse.rs  pretty_printing.rs  self_tokenization.rs  simple.rs  statement.rs  type_references.rs
parser/fuzz/: Cargo.toml
parser/fuzz/fuzz_targets/: module_roundtrip_naive.rs  module_roundtrip_structured.rs  statements.rs  structured.rs
parser/generator/: Cargo.toml  generator.rs
parser/generator/examples/: ex1.rs  ex2.rs  interpolation.rs
parser/generator/tests/: structures.rs
parser/src/: block.rs  comments.rs  cursor.rs  errors.rs  extractor.rs  functions.rs  generator_helpers.rs  lexer.rs  lib.rs  marker.rs  modules.rs  number.rs  operators.rs  options.rs  parameters.rs  property_key.rs  tokens.rs  variable_fields.rs  visiting.rs
parser/src/declarations/: export.rs  import.rs  mod.rs  variable.rs
parser/src/declarations/classes/: class_member.rs  mod.rs
parser/src/expressions/: arrow_function.rs  assignments.rs  mod.rs  object_literal.rs  operators.rs  template_literal.rs
parser/src/extensions/: custom_blocks.rs  decorators.rs  is_expression.rs  jsx.rs
parser/src/functions/: mod.rs  parameters.rs
parser/src/statements/: enum_statement.rs  for_statement.rs  if_statement.rs  mod.rs  switch_statement.rs  try_catch_statement.rs  while_statement.rs
parser/src/statements/classes/: class_member.rs  mod.rs
parser/src/types/: declare_variable.rs  declares.rs  enum_declaration.rs  interface.rs  mod.rs  namespace.rs  type_alias.rs  type_annotations.rs  type_declarations.rs  type_references.rs
parser/tests/: comments.rs  cursors.rs  expressions.rs  partial.rs  statements.rs  statements_and_declarations.rs  try_catch.rs  type_annotations.rs  visiting.rs
parser/visitable-derive/: Cargo.toml  macro.rs
slide/midterm_report/: package.json  slides.md  wrangler.toml
slide/midterm_report/pages/: background.md  comparison_tsc_decaf.md  current_and_future_status.md  decaf_check.md  typescript_check.md  typescript_check_easy.md  (+1 more)
slide/report/: eslint.config.js  package.json
src/: ast_explorer.rs  build.rs  check.rs  cli.rs  commands.rs  error_handling.rs  lib.rs  main.rs  repl.rs  reporting.rs  temp.rs  utilities.rs  wasm_bindings.rs
src/js-based-plugin/: index.mjs  package.json  pnpm-lock.yaml
src/js-cli-and-library/: bindings.cjs  cli.cjs  index.mjs  package.json
src/transformers/: mod.rs  optimisations.rs
(+2 files in other folders)
