[workspace]
members = ["parser", "parser/visitable-derive", "parser/generator", "checker"]

[package]
name = "decaf"
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/re-taro/decaf"
default-run = "decaf"

[lib]
name = "decaf_lib"
path = "src/lib.rs"
# cdylib is for WASM
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "decaf"
path = "src/main.rs"

[dependencies]
parser = { path = "./parser", version = "0.0.0", package = "decaf-parser" }
checker = { path = "./checker", version = "0.0.0", package = "decaf-checker" }
console = "0.14.1"
codespan-reporting = "0.11.1"
argh = "0.1.6"
base64 = "0.13.0"
multiline-term-input = "0.1.0"
enum-variants-strings = "0.2.2"
notify = "4.0.17"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
