[workspace]
members = [
  "parser",
  "parser/visitable-derive",
  "parser/generator",
  "checker",
  "checker/binary-serialize-derive",
  "checker/specification",
]


[package]
name = "decaf"
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/re-taro/decaf"
default-run = "decaf"

[lib]
name = "decaf_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "decaf"
path = "src/main.rs"

[dependencies]
argh = "0.1"
base64 = "0.21"
console = "0.15"
codespan-reporting = "0.11"
enum-variants-strings = "0.3"
pretty_assertions = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-json-parser = "0.0.2"
js-sys = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
self-replace = "1.3.7"
native-tls = "0.2.11"
multiline-term-input = "0.1.0"
notify = "6.1.0"
notify-debouncer-full = "0.3.1"
glob = "0.3"

[dependencies.checker]
path = "./checker"
version = "0.0.0"
features = ["decaf-parser", "serde-serialize"]
package = "decaf-checker"

[dependencies.parser]
path = "./parser"
version = "0.0.0"
features = ["extras"]
package = "decaf-parser"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-derive = "0.2.1"
serde-wasm-bindgen = "0.6.3"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
tsify = "0.4.5"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
default_trait_access = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
new_without_default = "allow"
result_unit_err = "allow"
thread_local_initializer_can_be_made_const = "allow"
implicit_hasher = "allow"

[profile.dev]
debug = false
