[package]
name = "decaf-checker"
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/re-taro/decaf"

[features]
default = []
declaration-synthesis = []
decaf-parser = ["parser"]

[dependencies]
source-map = { version = "0.12.0", features = ["span-serialize"] }
binary-serialize-derive = { path = "./binary-serialize-derive", version = "0.0.0" }
temporary-annex = "0.1.0"
derive-enum-from-into = "0.1.0"
derive-debug-extras = { version = "0.2.0", features = [
  "auto-debug-single-tuple-inline",
] }
enum-variants-strings = "0.2"
iterator-endiate = "0.2"
bimap = "0.6.2"
path-absolutize = { version = "3.0.14", features = ["use_unix_paths_on_wasm"] }
indexmap = "1.7.0"
either = "1.6.1"
levenshtein = "1.0.5"
once_cell = "1.10.0"
ordered-float = "3.0.0"
map_vec = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
# For trait object safe thingy
erased-serde = "0.3"
parser = { path = "../parser", version = "0.0.0", package = "decaf-parser", features = [
  "extras",
], optional = true }
