[package]
name = "decaf-checker"
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/re-taro/decaf"

[features]
default = ["decaf-parser"]
decaf-parser = ["dep:parser"]
serde-serialize = ["dep:serde"]

[dependencies]
source-map = { version = "0.15", features = [
  "serde-serialize",
  "self-rust-tokenize",
] }

binary-serialize-derive = { path = "./binary-serialize-derive", version = "0.0.0", package = "binary-serialize-derive" }

temporary-annex = "0.1"
derive-enum-from-into = "0.2"
derive-debug-extras = { version = "0.3", features = [
  "auto-debug-single-tuple-inline",
] }
enum-variants-strings = "0.3"
iterator-endiate = "0.2"
path-absolutize = { version = "3.0", features = ["use_unix_paths_on_wasm"] }
either = "1.6"
levenshtein = "1"
ordered-float = "4.2"
regress = { version = "0.10", features = [] }

serde = { version = "1.0", features = ["derive"], optional = true }
simple-json-parser = "0.0.2"

[target.'cfg(target_family = "wasm")'.dependencies]
tsify = "0.4.5"
wasm-bindgen = "=0.2.89"

[dependencies.parser]
path = "../parser"
optional = true
version = "0.0.0"
features = ["extras"]
package = "decaf-parser"

[dev-dependencies]
match_deref = "0.1.1"
