[package]
name = "decaf-parser"
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/re-taro/decaf"

[features]
default = ["self-rust-tokenize", "extras", "codespan-reporting"]
self-rust-tokenize = ["dep:self-rust-tokenize", "source-map/self-rust-tokenize"]
extras = []
codespan-reporting = ["source-map/codespan-reporting"]

[dependencies]
visitable-derive = { path = "./visitable-derive", version = "0.0.0", package = "decaf-parser-visitable-derive" }
derive-finite-automaton = "0.1.0"
derive-debug-extras = { version = "0.2.2", features = [
  "auto-debug-single-tuple-inline",
] }
derive-partial-eq-extras = "0.1.2"
derive-enum-from-into = "0.1.1"
temporary-annex = "0.1.0"
iterator-endiate = "0.1.0"
enum_variant_type = "0.3.1"
enum-variants-strings = "0.2"
source-map = { version = "0.12", features = [
  "span-serialize",
  "self-rust-tokenize",
] }
self-rust-tokenize = { version = "0.3.3", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokenizer-lib = { version = "1.5.0", features = [
  "buffered",
], default_features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokenizer-lib = { version = "1.5.0", features = [
  "parallel",
], default_features = false }

[dev-dependencies]
match_deref = "0.1.1"
