[package]
name = "decaf-parser"
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/re-taro/decaf"

[lints]
workspace = true

[features]
default = [
  "self-rust-tokenize",
  "extras",
  "codespan-reporting",
  "serde-serialize",
  "full-typescript",
]
self-rust-tokenize = ["dep:self-rust-tokenize", "source-map/self-rust-tokenize"]
codespan-reporting = ["source-map/codespan-reporting"]
serde-serialize = ["dep:serde"]
extras = []
full-typescript = []

[dependencies]
visitable-derive = { path = "./visitable-derive", version = "0.0.0", package = "decaf-parser-visitable-derive" }

derive-finite-automaton = "0.2"
derive-debug-extras = { version = "0.3", features = [
  "auto-debug-single-tuple-inline",
] }
derive-partial-eq-extras = "0.2"
derive-enum-from-into = "0.2"

temporary-annex = "0.1.0"
iterator-endiate = "0.2"

enum-variants-strings = "0.3"

get-field-by-type = "0"

macro_rules_attribute = { version = "0.2.0" }

serde = { version = "1.0", features = ["derive"], optional = true }
self-rust-tokenize = { version = "0.3", optional = true }

source-map = { version = "0.15", features = [
  "serde-serialize",
  "self-rust-tokenize",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokenizer-lib = { version = "1.6", features = [
  "buffered",
  "sized-tokens",
], default-features = false }
tsify = "0.4.5"
wasm-bindgen = "0.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokenizer-lib = { version = "1.6", features = [
  "parallel",
  "sized-tokens",
], default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
match_deref = "0.1.1"
