[package]
name = "binary-serialize-derive"
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/re-taro/decaf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-helpers = "0.4.2"

[lib]
path = "macro.rs"
proc_macro = true
