[package]
name = "decaf-checker-specification"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["base"]
base = []
staging = []
to_implement = []
all = ["base", "staging", "to_implement"]

[[test]]
name = "specification_test"
path = "test.rs"

[dependencies]
checker = { path = "..", version = "*", package = "decaf-checker", features = [
  "decaf-parser",
] }
parser = { path = "../../parser", version = "*", package = "decaf-parser" }
pretty_assertions = "1.3.0"
