[package]
name = "decaf-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pretty_assertions = "1.3.0"

[dependencies.decaf-parser]
path = ".."

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "statements"
path = "fuzz_targets/statements.rs"
test = false
doc = false
bench = false
